@@ -1,6 +1,6 @@
 /* readonlymap.vala
  *
- * Copyright (C) 2007  Jürg Billeter
+ * Copyright (C) 2007-2008  Jürg Billeter
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -77,7 +77,6 @@ public class Gee.ReadOnlyMap<K,V> : Object, Map<K,V> {
 
 	public bool remove (K key) {
 		assert_not_reached ();
-		return false;
 	}
 
 	public void clear () {
